# ObradexEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  bitEngine.sln  config.ini  setup.ps1  setup.sh
.github/workflows/: VersionUpdater.yml
assets/: ASSETS.md
bitEngine/: AudioSystem.cpp  AudioSystem.h  Billboard.h  Camera.cpp  Camera.h  ConfigLoader.cpp  ConfigLoader.h  EditorUI.cpp  EditorUI.h  Engine.cpp  Engine.h  FileDialog.cpp  FileDialog.h  Input.cpp  Input.h  Interaction.cpp  Interaction.h  InventorySystem.cpp  InventorySystem.h  LevelEditor.cpp  LevelEditor.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureManager.cpp  TextureManager.h  Timer.cpp  Timer.h  Window.cpp  Window.h  World.cpp  World.h  bitEngine.vcxproj  (+6 more)
bitEngine/Levels/: alpha_demo.lvl  level.lvl  levelBase.lvl
bitEngine/Shaders/: world.frag  world.vert
bitEngine/assets/: ASSETS.md
docs/: DOCUMENTATION.md  References.md  RoadmapAndIssues.md
glad/src/: glad.c
