cmake_minimum_required(VERSION 3.20)
project(ObradexEngine VERSION 0.1.0 LANGUAGES CXX C)

# ============================================================
# Project Configuration
# ============================================================
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# ============================================================
# Dependencies
# ============================================================
find_package(OpenGL REQUIRED)

# ── GLFW ─────────────────────────────────────────────────────
find_package(glfw3 3.3 QUIET)
if(NOT glfw3_FOUND)
    message(STATUS "[ObradexEngine] GLFW not found — fetching via FetchContent.")
    include(FetchContent)
    FetchContent_Declare(
        glfw
        GIT_REPOSITORY https://github.com/glfw/glfw.git
        GIT_TAG        3.3.8
    )
    set(GLFW_BUILD_DOCS     OFF CACHE BOOL "" FORCE)
    set(GLFW_BUILD_TESTS    OFF CACHE BOOL "" FORCE)
    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(glfw)
endif()

# ── GLM (header-only) ─────────────────────────────────────────
# We intentionally NEVER run GLM's own CMakeLists.txt because
# older releases (0.9.9.8) declare cmake_minimum_required(2.6)
# which CMake 3.28+ rejects.  Instead we create an INTERFACE
# target ourselves pointing at the headers — all we ever need.
if(NOT TARGET glm::glm)
    # Priority 1: already downloaded by setup.sh into third_party/glm
    set(GLM_LOCAL "${CMAKE_SOURCE_DIR}/third_party/glm")
    if(EXISTS "${GLM_LOCAL}/glm/glm.hpp")
        message(STATUS "[ObradexEngine] GLM found in third_party/glm/")
        add_library(_glm INTERFACE)
        target_include_directories(_glm INTERFACE "${GLM_LOCAL}")
        add_library(glm::glm ALIAS _glm)
    else()
        # Priority 2: fetch via FetchContent — use Populate (not MakeAvailable)
        # so we never invoke GLM's own broken CMakeLists.txt
        message(STATUS "[ObradexEngine] GLM not found — fetching via FetchContent.")
        include(FetchContent)
        FetchContent_Declare(
            glm
            GIT_REPOSITORY https://github.com/g-truc/glm.git
            GIT_TAG        1.0.1   # 1.x has a correct cmake_minimum_required
        )
        # FetchContent_Populate downloads the sources but does NOT add_subdirectory,
        # so GLM's CMakeLists.txt is never executed.
        FetchContent_GetProperties(glm)
        if(NOT glm_POPULATED)
            FetchContent_Populate(glm)
        endif()
        add_library(_glm INTERFACE)
        target_include_directories(_glm INTERFACE "${glm_SOURCE_DIR}")
        add_library(glm::glm ALIAS _glm)
    endif()
endif()

# ── GLAD (pre-generated, bundled in third_party/glad/) ────────
# GLAD was already generated by setup.sh (Linux/macOS) or is
# bundled directly in the repo for Windows.  No Python required.
if(NOT EXISTS "${CMAKE_SOURCE_DIR}/glad/include/glad/glad.h")
    message(WARNING
        "[ObradexEngine] glad/include/glad/glad.h is missing.\n"
        "  On Linux/macOS run:  bash setup.sh\n"
        "  On Windows the file should be in the repo already.")
endif()

# ============================================================
# Source Files  (all flat in bitEngine/)
# ============================================================
set(ENGINE_SOURCES
    # Entry point
    bitEngine/main.cpp
    # Core engine
    bitEngine/Engine.cpp
    bitEngine/Window.cpp
    bitEngine/Input.cpp
    bitEngine/Timer.cpp
    # Renderer
    bitEngine/Renderer.cpp
    bitEngine/Shader.cpp
    bitEngine/Mesh.cpp
    bitEngine/Camera.cpp
    bitEngine/PostProcess.cpp
    # World
    bitEngine/World.cpp
    # Gameplay
    bitEngine/Player.cpp
    bitEngine/Interaction.cpp
    # Editor UI
    bitEngine/EditorUI.cpp
    # GLAD — pre-generated OpenGL 4.1 Core loader
    glad/src/glad.c
    # Dear ImGui
    third_party/imgui/imgui.cpp
    third_party/imgui/imgui_draw.cpp
    third_party/imgui/imgui_tables.cpp
    third_party/imgui/imgui_widgets.cpp
    third_party/imgui/backends/imgui_impl_glfw.cpp
    third_party/imgui/backends/imgui_impl_opengl3.cpp
    # stb_image — one implementation unit
    third_party/stb/stb_image_impl.cpp
)

# ============================================================
# Executable
# ============================================================
add_executable(ObradexEngine ${ENGINE_SOURCES})

target_include_directories(ObradexEngine PRIVATE
    bitEngine/                    # flat project headers
    glad/include      # <glad/glad.h>  +  <KHR/khrplatform.h>
    third_party/imgui             # <imgui.h>
    third_party/imgui/backends    # <imgui_impl_glfw.h>
    third_party/stb               # <stb_image.h>
)

target_link_libraries(ObradexEngine PRIVATE
    OpenGL::GL
    glfw
    glm::glm
)

if(UNIX AND NOT APPLE)
    target_link_libraries(ObradexEngine PRIVATE dl)  # GLAD needs dlopen on Linux
endif()

# ============================================================
# Copy Shaders next to the executable after each build
# ============================================================
add_custom_command(TARGET ObradexEngine POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${CMAKE_SOURCE_DIR}/bitEngine/Shaders"
        "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Shaders"
    COMMENT "[ObradexEngine] Copying shaders to output..."
)

# ============================================================
# Compiler flags
# ============================================================
if(MSVC)
    target_compile_options(ObradexEngine PRIVATE /W3)
    # Suppress C4100 (unreferenced param) — ImGui callbacks trigger this
    target_compile_options(ObradexEngine PRIVATE /wd4100 /wd4505)
else()
    target_compile_options(ObradexEngine PRIVATE
        -Wall -Wextra -Wpedantic -Wno-unused-parameter)
endif()

target_compile_definitions(ObradexEngine PRIVATE
    $<$<CONFIG:Debug>:OBRADEX_DEBUG>
    $<$<CONFIG:Release>:OBRADEX_RELEASE>
)

message(STATUS "[ObradexEngine] Build type : ${CMAKE_BUILD_TYPE}")
message(STATUS "[ObradexEngine] Output dir : ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
